--- a/02-multi-play.yml
+++ b/02-multi-play.yml
@@ -9,7 +9,7 @@
       path: /home/centos/new_dir
       state: directory
 
-- name: Update n1 server
+- name: Create Directory
   file:
     path: /home/centos/new_dir_1
     state: directory
