--- a/hosts.ini
+++ b/hosts.ini
@@ -7,4 +7,7 @@ n3 ansible_host=172.31.42.57 ansible_user=centos ansible_ssh_private_key_file=/h
 n4 ansible_host=172.31.46.195 ansible_user=centos ansible_ssh_private_key_file=/home/centos/mikealpha.pem ansible_ssh_common_args='-o StrictHostkeyChecking=no'
 
 
+[g3]
+M2 ansible_host=172.31.11.253 ansible_user=admin ansible_ssh_private_key_file=/home/centos/mikealpha.pem ansible_ssh_common_args='-o StrictHostkeyChecking=no'
+n4 ansible_host=172.31.46.195 ansible_user=centos ansible_ssh_private_key_file=/home/centos/mikealpha.pem ansible_ssh_common_args='-o StrictHostkeyChecking=no'
 
