--- a/08-multi-plateform.yml
+++ b/08-multi-plateform.yml
@@ -1,43 +1,25 @@
 ---
 - name: Install HTTP server
-  hosts: g1
+  hosts: g3
   become: yes
 
   tasks:
-  - name: Install HTTPD
-    yum:
-      name: httpd
-      state: present
-    when: ansible_distribution == "CentOS"
+    - name: Check OS Distribution
+      command: "cat /etc/os-release"
+      register: os_release_output
 
-  - name: Start Httpd
-    service:
-      name: httpd
-      state: started
-    when: ansible_distribution == "CentOS"  
+    - name: Update package lists
+      apt:
+        update_cache: yes
+      when: "'Debian' in os_release_output.stdout"
 
-  - name: Enable Httpd
-    service:
-      name: httpd
-      enabled: yes 
-    when: ansible_distribution == "CentOS"  
+    - name: Install HTTP Server on CentOS
+      yum:
+        name: httpd
+      when: "'CentOS Linux 7' in os_release_output.stdout"
 
-- name: Install HTTPD
-    yum:
-      name: httpd
-      state: present 
-    when: ansible_distribution == "CentOS"  
-
-  - name: Start Httpd
-    service:
-      name: httpd
-      state: started 
-    when: ansible_distribution == "CentOS"
-
-  - name: Enable Httpd
-    service:
-      name: httpd
-      enabled: yes
-                        
-
-ansible_distribution
+    - name: Install HTTP Server on Debian
+      apt:
+        name: apache2
+      when: "'Debian' in os_release_output.stdout"
+...
