--- a/09-multi-plateform.yml
+++ b/09-multi-plateform.yml
@@ -8,35 +8,35 @@
     dnf:
       name: httpd
       state: present
-    when: ansible_distribution == "Amazon" or ansible_distributioon == "Centos"
+    when: ansible_distribution == "Amazon" or ansible_distribution == "Centos"
 
   - name: Start Httpd
     service:
       name: httpd
       state: started 
-    when: ansible_distribution == "Amazon" or ansible_distributioon == "Centos"
+    when: ansible_distribution == "Amazon" or ansible_distribution == "Centos"
   
   - name: Enable Httpd
   service: 
     name: httpd
     enabled: yes
-  when: ansible_distribution == "Amazon" or ansible_distributioon == "Centos"
+    when: ansible_distribution == "Amazon" or ansible_distribution == "Centos"
 
   - name: Install Apache2
     apt:
       name: apache2
       state: present
-    when: ansible_distribution == "Ubuntu" or ansible_distributioon == "Debian"
+    when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
 
   - name: Start Apache2
     service:
       name: apache2
       state: started
-    when: ansible_distribution == "Ubuntu" or ansible_distributioon == "Debian"
+    when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
 
   - name: Enable Apache2
   service:
     name: apache2
     enabled: yes
-  when: ansible_distribution == "Ubuntu" or ansible_distributioon == "Debian"
+    when: ansible_distribution == "Ubuntu" or ansible_distribution == "Debian"
 ...
