--- a/10-dynamic.yml
+++ b/10-dynamic.yml
@@ -1,10 +1,10 @@
 ---
-- name: Static page
+- name: dynamic page
   hosts: g1
   become: yes
 
   tasks:
-  - name: Update static page
+  - name: Update dynamic page
     template:
       src: dynamic.j2
       dest: /var/www/html/dynamic.html 
